# HexImg

./: .gitignore  CMakeLists.txt  README.md  go.mod
.github/workflows/: release.yml
.workbuddy/memory/: 2026-07-03.md
cmd/heximg/: main.go  main_test.go  native_other.go  native_windows.go
internal/fas/: icons.go
internal/ui/: dropzone.go  theme.go
packaging/linux/: com.hexvork.HexImg.desktop
packaging/windows/: HexImg.iss  HexImg.rc
qml/: FormatBadge.qml  Main.qml  ShadButton.qml  ShadComboBox.qml  ShadTextField.qml
scripts/: build-heif-tools.ps1  create-app-icon.ps1  package-unix.sh  package-windows.ps1
src/: heximgbackend.cpp  heximgbackend.h  main.cpp  queuemodel.cpp  queuemodel.h
tests/: heximgbackend_test.cpp
